cmake_minimum_required(VERSION 2.8)

INSTALL(DIRECTORY "plugins/anchor" DESTINATION "/var/lib/dokuwiki/lib/plugins")
INSTALL(DIRECTORY "tpl/torch7" DESTINATION "/var/lib/dokuwiki/lib/tpl")
INSTALL(FILES "conf/local.php" DESTINATION "/etc/dokuwiki")
INSTALL(FILES "conf/apache.conf" DESTINATION "/etc/dokuwiki")
INSTALL(FILES "conf/users.auth.php" DESTINATION "/etc/dokuwiki")

SET(CPACK_PACKAGE_CONTACT "ronan [at] collobert [dot] com")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Configures Dokuwiki for Torch7 Web site.")

SET(CPACK_PACKAGE_NAME "torch7-www")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYRIGHT.txt")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.txt")
SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 0)
SET(CPACK_PACKAGE_VERSION_PATCH 0)
SET(CPACK_PACKAGE_VENDOR "The Torch Team")

# Debian related stuff
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "dokuwiki")
SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")

SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/debian/conffiles" "${CMAKE_SOURCE_DIR}/debian/postinst" "${CMAKE_SOURCE_DIR}/debian/prerm")

INCLUDE(CPack)
